force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <label>Quote</label>
    <nameField>
        <displayFormat>PPL-{000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>