force-app/main/default/objects/Quote__c/fields/Customer_Party__c.field-meta.xml
<CustomField>
    <fullName>Customer_Party__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer/Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>