force-app/main/default/objects/Quote__c/fields/Delivery_Period__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Period__c</fullName>
    <label>Delivery Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>