force-app/main/default/objects/Quote__c/fields/Duration_of_contract__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_contract__c</fullName>
    <label>Duration of contract</label>
    <type>TextArea</type>
</CustomField>