force-app/main/default/objects/Quote__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <formula>if(text(Opportunity__r.Stage__c) == &apos;Closed Won&apos;, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>