force-app/main/default/objects/Quote__c/fields/Obligations_of_the_customer__c.field-meta.xml
<CustomField>
    <fullName>Obligations_of_the_customer__c</fullName>
    <label>Obligations of the customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>