force-app/main/default/objects/Quote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>