force-app/main/default/objects/Quote__c/fields/Quote_Branch__c.field-meta.xml
<CustomField>
    <fullName>Quote_Branch__c</fullName>
    <label>Quote Branch</label>
    <length>5</length>
    <type>Text</type>
</CustomField>