force-app/main/default/objects/Quote__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <formula>if( text( Opportunity__r.Ware_House__r.City__c ) == &apos;Kolkata&apos;, &apos;PPLCU&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;SQT&apos;+RIGHT( Name , LEN(Name) - 4),if( text(Opportunity__r.Ware_House__r.City__c) == &apos;Gurugram&apos;, &apos;PPLHO&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;SQT&apos;+RIGHT( Name , LEN(Name) - 4),&apos;Please select Sales From.&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>