force-app/main/default/objects/Quote__c/fields/Quote_Percentage_Max__c.field-meta.xml
<CustomField>
    <fullName>Quote_Percentage_Max__c</fullName>
    <label>Quote Percentage Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>