force-app/main/default/objects/Quote__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>DEO</fullName>
            </value>
            <value>
                <fullName>ELC</fullName>
            </value>
            <value>
                <fullName>Engine parts</fullName>
            </value>
            <value>
                <fullName>OTO</fullName>
            </value>
            <value>
                <fullName>Overhaul</fullName>
            </value>
            <value>
                <fullName>Repair engine</fullName>
            </value>
            <value>
                <fullName>Replacement engine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>