force-app/main/default/objects/Quote__c/fields/Quote_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type_Formula__c</fullName>
    <formula>Text(Opportunity__r.PI_Type__c )</formula>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>