force-app/main/default/objects/Quote__c/fields/Quote_Validity__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity__c</fullName>
    <label>Quote Validity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>