force-app/main/default/objects/Quote__c/fields/RecordType_Picklist__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Picklist__c</fullName>
    <label>Quote RecordType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>