force-app/main/default/objects/Quote__c/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping  Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote (Shipping  Account)</relationshipLabel>
    <relationshipName>Quote1</relationshipName>
    <type>Lookup</type>
</CustomField>