force-app/main/default/objects/Quote__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>if(NOT(ISBLANK(Customer_Party__r.ShippingStreet)),Customer_Party__r.ShippingStreet +BR()+&apos; &apos;,&apos;&apos;)+
if(NOT(ISBLANK(Customer_Party__r.ShippingCity)),Customer_Party__r.ShippingCity +&apos; &apos;, &apos;&apos;)+
if(NOT(ISBLANK(Customer_Party__r.ShippingState)),Customer_Party__r.ShippingState +&apos; &apos;, &apos;&apos;)+
if(NOT(ISBLANK(Customer_Party__r.ShippingPostalCode)),Customer_Party__r.ShippingPostalCode +BR()+&apos; &apos;, &apos;&apos;)+
if(NOT(ISBLANK(Customer_Party__r.ShippingCountry)),Customer_Party__r.ShippingCountry,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>