force-app/main/default/objects/Quote__c/fields/Term_and_Condition_rich__c.field-meta.xml
<CustomField>
    <fullName>Term_and_Condition_rich__c</fullName>
    <label>Terms and Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>