force-app/main/default/objects/Quote__c/fields/Term_And_ConditionR__c.field-meta.xml
<CustomField>
    <fullName>Term_And_ConditionR__c</fullName>
    <label>Term And Condition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>