force-app/main/default/objects/Quote__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <label>Termination</label>
    <type>TextArea</type>
</CustomField>