force-app/main/default/objects/Quote__c/recordTypes/AMC.recordType-meta.xml
<RecordType>
    <fullName>AMC</fullName>
    <active>true</active>
    <label>AMC</label>
</RecordType>