force-app/main/default/objects/Quote__c/validationRules/Discount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Quote_Percentage_Max__c  &gt;=   Max_Discount__c &amp;&amp;  TEXT(Approval__c)  &lt;&gt; &quot;Approved&quot;</errorConditionFormula>
    <errorMessage>Max Discount Reached. Please submit this Quote for Aproval.</errorMessage>
</ValidationRule>