force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Number__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Customer_Party__c</columns>
    <columns>Quote_Branch__c</columns>
    <columns>Quote_Status__c</columns>
    <columns>Quote_Type_Formula__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>